# CLInkedIn

./: .gitignore  README.md  pyproject.toml
skills/clinkedin/: SKILL.md
skills/linkedin_list_connections/: SKILL.md
skills/linkedin_search_people/: SKILL.md
skills/linkedin_send_connection_request/: SKILL.md
src/clinkedin/: auth.py  cli.py  client.py  connections.py  disconnect.py  follow.py  invite.py  mcp_server.py  posts.py  profile.py  search.py
tests/: test_disconnect.py  test_follow.py  test_format.py  test_invite.py  test_mcp_server.py  test_posts.py  test_profile.py
tests/fixtures/: dash_profile_response.json  profile_posts_response.json  search_posts_ai.html  search_posts_broken.html  search_posts_hoisted.html  search_posts_login_wall.html  search_posts_no_results.html
