[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinkedin"
version = "0.1.0"
description = "CLInkedIn — a personal CLI for LinkedIn"
requires-python = ">=3.10"
dependencies = [
    "linkedin-api~=2.3",
    "browser-cookie3~=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
mcp = ["mcp>=1.2"]

[project.scripts]
clinkedin = "clinkedin.cli:main"
clinkedin-mcp = "clinkedin.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/clinkedin"]
